Coloured in some md cells.

--- a/ML.ipynb
+++ b/ML.ipynb
@@ -37,7 +37,9 @@
    "id": "d5dfa5cc-930f-4504-93cf-6709f5aee4bf",
    "metadata": {},
    "source": [
-    "A) What is the most time consuming aspect of developing a predictive model, according to the authors?"
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "A) What is the most time consuming aspect of developing a predictive model, according to the authors?\n",
+    "</div>"
    ]
   },
   {
@@ -45,7 +47,9 @@
    "id": "32d97156-3871-4b3f-b0c9-963f2ed9bd78",
    "metadata": {},
    "source": [
-    "80% of effort in building models is in “preprocessing, merging, customizing, and cleaning”."
+    "<div class=\"alert alert-block alert-success\">\n",
+    "80% of effort in building models is in “preprocessing, merging, customizing, and cleaning”.\n",
+    "</div>"
    ]
   },
   {
@@ -53,7 +57,9 @@
    "id": "20fa97e8-6b3d-477f-a46f-6ed810a0a90b",
    "metadata": {},
    "source": [
-    "B) How have “traditional” predictive models dealt with high numbers of predictor variables, according to the authors?"
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "B) How have “traditional” predictive models dealt with high numbers of predictor variables, according to the authors?\n",
+    "</div>"
    ]
   },
   {
@@ -61,7 +67,9 @@
    "id": "a60d92b9-272c-4bb9-b9a3-ea315bdd6d3b",
    "metadata": {},
    "source": [
-    "Traditional modeling approaches have dealt with complexity by choosing a very limited number of variables to consider."
+    "<div class=\"alert alert-block alert-success\">\n",
+    "Traditional modelling approaches have dealt with complexity by choosing a very limited number of variables to consider.\n",
+    "</div>"
    ]
   },
   {
@@ -77,7 +85,9 @@
    "id": "380d8672-49fe-4496-8637-9796c863ab58",
    "metadata": {},
    "source": [
-    "A) We have laboratory test data on patients admitted to a critical care unit and we are trying to identify patients with an emerging, rare disease. There are no labels to indicate which patients have the disease, but we believe that the infected patients will have very distinct characteristics. Do we look for a supervised or unsupervised machine learning approach?"
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "A) We have laboratory test data on patients admitted to a critical care unit and we are trying to identify patients with an emerging, rare disease. There are no labels to indicate which patients have the disease, but we believe that the infected patients will have very distinct characteristics. Do we look for a supervised or unsupervised machine learning approach?\n",
+    "</div>"
    ]
   },
   {
@@ -85,7 +95,9 @@
    "id": "2b2d2c85-ea82-4ed2-a138-f461f7daabe7",
    "metadata": {},
    "source": [
-    "The prediction targets are not labelled, so an unsupervised learning approach would be appropriate. Our hope is that we will see a unique cluster in the data that pertains to the emerging disease."
+    "<div class=\"alert alert-block alert-success\">\n",
+    "The prediction targets are not labelled, so an unsupervised learning approach would be appropriate. Our hope is that we will see a unique cluster in the data that pertains to the emerging disease.\n",
+    "</div>"
    ]
   },
   {
@@ -93,7 +105,9 @@
    "id": "6ad5c7cc-d480-4a6b-a5cd-e5bd6841784d",
    "metadata": {},
    "source": [
-    "B) We would like to predict whether or not patients will respond to a new drug that is under development based on several genetic markers. We have a large corpus of clinical trial data that includes both genetic markers of patients and their response the new drug. Do we use a supervised or unsupervised approach?"
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "B) We would like to predict whether or not patients will respond to a new drug that is under development based on several genetic markers. We have a large corpus of clinical trial data that includes both genetic markers of patients and their response to the new drug. Do we use a supervised or unsupervised approach?\n",
+    "</div>"
    ]
   },
   {
@@ -101,7 +115,9 @@
    "id": "1ee78bbc-bb75-47a6-a652-dab0412161f1",
    "metadata": {},
    "source": [
-    "We have both genetic markers and known outcomes, so in this case supervised learning is appropriate."
+    "<div class=\"alert alert-block alert-success\">\n",
+    "We have both genetic markers and known outcomes, so in this case supervised learning is appropriate.\n",
+    "</div>"
    ]
   },
   {
@@ -122,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "19f646e9",
    "metadata": {},
    "outputs": [
@@ -276,7 +292,7 @@
        "4        36.44             31.0  11.3            182.9  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +561,9 @@
    "id": "5a9c0b8f-91f5-4beb-92b8-0e02a3a62ae9",
    "metadata": {},
    "source": [
-    "A) What is the approximate percent mortality in the eICU cohort?"
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "A) What is the approximate percent mortality in the eICU cohort?\n",
+    "</div>"
    ]
   },
   {
@@ -553,7 +571,9 @@
    "id": "a8956e22-ca8d-4dbb-86f7-3fc2ca3dec51",
    "metadata": {},
    "source": [
-    "Approximately 17% (40/235)"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "Approximately 17% (40/235)\n",
+    "</div>"
    ]
   },
   {
@@ -561,7 +581,9 @@
    "id": "ecf6a118-e4f5-48a1-aec3-e833e18d0a81",
    "metadata": {},
    "source": [
-    "B) Which variables appear noticeably different in the “Alive” and “Expired” groups?"
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "B) Which variables appear noticeably different in the “Alive” and “Expired” groups?\n",
+    "</div>"
    ]
   },
   {
@@ -569,7 +591,9 @@
    "id": "e956988c-fe46-4ff8-867a-a3f9505f3e18",
    "metadata": {},
    "source": [
-    "Several variables differ, including age, length of stay, acute physiology score, heart rate, etc."
+    "<div class=\"alert alert-block alert-success\">\n",
+    "Several variables differ, including age, length of stay, acute physiology score, heart rate, etc.\n",
+    "</div>"
    ]
   },
   {
@@ -577,7 +601,9 @@
    "id": "9103a408-3802-45cd-85d5-5203cb0b4954",
    "metadata": {},
    "source": [
-    "C) How does the in-hospital mortality differ between the eICU cohort and the ones in Rajkomar et al?"
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "C) How does the in-hospital mortality differ between the eICU cohort and the ones in Rajkomar et al?\n",
+    "</div>"
    ]
   },
   {
@@ -585,7 +611,9 @@
    "id": "33fc9080-5e4c-44d0-9d94-2fba31a5914e",
    "metadata": {},
    "source": [
-    "The Rajkomar et al dataset has significantly lower in-hospital mortality (~2% vs 17%)."
+    "<div class=\"alert alert-block alert-success\">\n",
+    "The Rajkomar et al dataset has significantly lower in-hospital mortality (~2% vs 17%).\n",
+    "</div>"
    ]
   },
   {
